tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.out
Warning: Undefined array key "" in /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php on line 179

Fatal error: Uncaught TypeError: array_merge(): Argument #1 must be of type array, null given in /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php:179
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php(179): array_merge(NULL, Array)
#1 /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php(186): round_robin(Array, Array, 17)
#2 /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php(201): multi_level_feedback_queue(Array)
#3 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/scheduling/multi_level_feedback_queue.php on line 179